# tahini-sidecar

./: .bazelrc  .dockerignore  .gitignore  .gitmodules  BUILD  Dockerfile  Dockerfile.client  Dockerfile.server  Enclave.config.xml  Enclave.lds  MODULE.bazel  Makefile  README.md  WORKSPACE  docker-compose.sgx.yml  docker-compose.yml  e_sidecar.c  rust_cxx_bridge.bzl  sidecar.config.xml  sidecar.edl  sidecar.h  sidecar.lds  t_sidecar.c  u_main.c  u_sidecar.go  u_util.c  u_util.h
.github/workflows/: build-fizz.yml
docs/: ATTESTATION.md
examples/: BUILD  Makefile  hello.c
examples/rpc-client/: BUILD.bazel  Cargo.toml
examples/rpc-client/src/: main.rs
examples/rpc-server/: BUILD.bazel  Cargo.toml
examples/rpc-server/src/: main.rs
infra/: install.sh  sync.sh
scripts/: client-entrypoint.sh  demo.sh  docker-build.sh  docker-run.sh  server-entrypoint.sh
