module(
    name = "tahini_sidecar",
    version = "1.0.0",
)

bazel_dep(name = "rules_cc", version = "0.2.16")
bazel_dep(name = "rules_shell", version = "0.6.1")
bazel_dep(name = "rules_rust", version = "0.68.1")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "fizz", version = "2025.02.10.00.bcr.2")

# Rust toolchain
rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2021",
    versions = ["1.85.0"],
)
use_repo(rust, "rust_toolchains")
register_toolchains("@rust_toolchains//:all")

# Rust crate dependencies
crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")

crate.spec(package = "cxx", version = "=1.0.176", features = ["c++14"])
crate.spec(package = "clap", version = "4", features = ["derive"])
crate.spec(package = "tokio", version = "1", features = ["macros", "rt-multi-thread", "net", "io-util"])
crate.spec(package = "serde", version = "1", features = ["derive"])
crate.spec(package = "serde_json", version = "1")
crate.spec(package = "thiserror", version = "1.0")
crate.spec(package = "bytes", version = "1.0")
crate.spec(package = "base64", version = "0.22")
crate.spec(package = "reqwest", version = "0.12", features = ["json"])
crate.spec(package = "sha2", version = "0.10")

crate.annotation(
    crate = "cxx",
    additive_build_file_content = """\
load("@rules_cc//cc:defs.bzl", "cc_library")
cc_library(
    name = "cxx_cc",
    hdrs = ["include/cxx.h"],
    srcs = ["src/cxx.cc"],
    includes = ["include"],
    visibility = ["//visibility:public"],
)
""",
)

crate.from_specs()
use_repo(crate, "crates")
