[package]
name = "rpc-server"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "rpc-server"
path = "src/main.rs"

[dependencies]
fizz_rs = { path = "../../third_party/fizz-rs" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "net",
    "io-util",
] }
